LRDOCS-13888 Update WildFly article